switched to jdk 17 and started refactor